kubernetes/ingress/puppet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: puppet-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: puppet.example.org
    http:
      paths:
      - backend:
          serviceName: puppet
          servicePort: 8140
